--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/count_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -20,11 +20,36 @@
         android:id="@+id/count_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="カウントアップ"
+        android:text="アップ"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.238"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/count_text"
-        app:layout_constraintVertical_bias="0.045" />
+        app:layout_constraintVertical_bias="0.055" />
+
+    <Button
+        android:id="@+id/count_button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ダウン"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.468"
+        app:layout_constraintStart_toEndOf="@+id/count_button"
+        app:layout_constraintTop_toBottomOf="@+id/count_text"
+        app:layout_constraintVertical_bias="0.055" />
+
+    <!--    <Button2-->
+<!--        android:id="@+id/count_button2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="カウントダウン"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.892"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/count_text"-->
+<!--        app:layout_constraintVertical_bias="0.127" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
